<?xml version="1.0" encoding="utf-8"?>
<!--
/* //device/apps/common/assets/res/any/strings.xml
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources>
    <string name="app_name">GPS Test</string>

    <string name="gps_status_tab">Status</string>
    <string name="gps_map_tab">Map</string>
    <string name="gps_sky_tab">Sky</string>

    <string name="gps_start">Start</string>
    <string name="gps_pause">Pause</string>
    <string name="menu_settings">Settings</string>
    <string name="delete_aiding_data">Clear Aiding Data</string>
    <string name="delete_aiding_data_success">Successfully deleted aiding data.</string>
    <string name="delete_aiding_data_failure">Platform does not support deleting aiding data.
    </string>
    <string name="send_location">Send Location</string>
    <string name="set_fix_frequency">Set Fix Frequency</string>
    <string name="force_time_injection">Inject Time</string>
    <string name="force_time_injection_success">Successfully injected time data.</string>
    <string name="force_time_injection_failure">Platform does not support injecting time data.
    </string>
    <string name="force_xtra_injection">Inject XTRA Data</string>
    <string name="force_xtra_injection_success">Successfully injected XTRA data.</string>
    <string name="force_xtra_injection_failure">Platform does not support injecting XTRA data.
    </string>

    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="mode_map">Map</string>
    <string name="mode_satellite">Satellite</string>

    <string name="gps_latitude_label">Lat:</string>
    <string name="gps_latitude_value">%1$.7f\u00B0</string>
    <string name="gps_longitude_label">Long:</string>
    <string name="gps_longitude_value">%1$.7f\u00B0</string>
    <string name="gps_fix_time_label">Time:</string>
    <string name="gps_ttff_label">TTFF:</string>
    <string name="gps_altitude_label">Alt:</string>
    <string name="gps_altitude_value">%1$.1f m</string>
    <string name="gps_altitude_msl_label">Alt (MSL):</string>
    <string name="gps_altitude_msl_value">%1$.1f m</string>
    <string name="gps_accuracy_label">Acc:</string>
    <string name="gps_accuracy_value">%1$.1f m</string>
    <string name="gps_speed_label">Speed:</string>
    <string name="gps_speed_value">%1$.1f m/sec</string>
    <string name="gps_bearing_label">Bearing:</string>
    <string name="gps_bearing_value">%1$.1f\u00B0</string>
    <string name="gps_num_sats_label"># Sats:</string>
    <string name="gps_num_sats_value">%1$d/%2$d</string>
    <string name="pdop_label">PDOP:</string>
    <string name="hvdop_label">H/V DOP:</string>
    <string name="hvdop_value">%1$.1f/%2$.1f</string>

    <string name="gps_prn_column_label">ID</string>
    <string name="gps_flag_image_label">GNSS</string>
    <string name="gps_snr_column_label">SNR</string>
    <string name="gps_cn0_column_label">C/N0</string>
    <string name="gps_elevation_column_label">Elev</string>
    <string name="gps_elevation_column_value">%1$s\u00B0</string>
    <string name="gps_azimuth_column_label">Azim</string>
    <string name="gps_azimuth_column_value">%1$s\u00B0</string>
    <string name="gps_flags_column_label">Flags</string>
    <string name="gps_not_supported">GPS not supported. Exiting app&#8230;</string>
    <string name="install">Install</string>
    <string name="no_thanks">No thanks</string>
    <string name="please_install_google_maps">The Map tab requires Google Maps</string>
    <string name="enable_gps_message">GPS is disabled. Enable it now?</string>
    <string name="enable_gps_positive_button">Enable GPS</string>
    <string name="enable_gps_negative_button">No</string>
    <string name="gps_set_location_listener">Started GPS with interval = %1$ss, min. dist. = %2$sm
    </string>

    <!-- What's New -->
    <string name="main_help_whatsnew_title">What\'s New?</string>
    <!-- Try to only show trip planning in What's New for regions that support it -->
    <string name="main_help_whatsnew">&#8226;\u0020
        <b>Galileo support</b>
        - The last major GNSS!\n&#8226;\u0020
        <b>Android Monitor Output</b>
        - See NMEA, raw measurements, and nav messages via Android Studio
        (http://bit.ly/gpstest-am-logging)\n&#8226;\u0020
        <b>New data</b>
        - Altitude (MSL), DOP, # Sats\n&#8226;\u0020
        <b>Help</b>
        - Check out new field definitions via the menu\n&#8226;\u0020
        <b>Google Maps/Play Services not required</b>
        - Uninstall it at will\n&#8226;\u0020
        <b>Bug fixes</b>
        - See http://bit.ly/gpstest-releases
    </string>
    <string name="main_help_close">Close</string>

    <!-- Preferences -->
    <string name="pref_title">Settings</string>
    <string name="pref_map_category_title">Map</string>
    <string name="pref_map_type_title">Map Type</string>
    <string name="pref_map_type_summary">Sets the type of map tiles shown</string>
    <string name="pref_map_type_dialog_title">Choose Map Type</string>

    <string name="pref_rotate_map_with_compass_title">Rotate Map with Compass</string>
    <string name="pref_rotate_map_with_compass_summary">Change the map orientation based on your
        direction
    </string>

    <string name="pref_tilt_map_with_sensors_title">Tilt Map with Device</string>
    <string name="pref_tilt_map_with_sensors_summary">Change to a first-person map view when you
        hold up the device
    </string>

    <string name="pref_gps_category_title">GNSS</string>
    <string name="pref_auto_start_gps_title">Auto-Start GNSS</string>
    <string name="pref_auto_start_gps_summary">Start GNSS when the app starts</string>

    <string name="pref_gps_min_time_title">Interval</string>
    <string name="pref_gps_min_time_summary">Time between GNSS fixes, in seconds</string>
    <string name="pref_gps_min_time_dialog_title">Enter an interval, in seconds</string>
    <string name="pref_gps_min_time_invalid_entry">Interval must be a number</string>

    <string name="pref_use_gnss_apis_title">Use GNSS APIs</string>
    <string name="pref_use_gnss_apis_summary">Available on Android 7.0 and higher. If unchecked,
        will use the legacy GPSStatus.Listener.
    </string>

    <string name="pref_gps_min_distance_title">Min. Distance</string>
    <string name="pref_gps_min_distance_summary">Minimum distance between GNSS fixes, in meters
    </string>
    <string name="pref_gps_min_distance_dialog_title">Enter a min. distance, in meters</string>
    <string name="pref_gps_min_distance_invalid_entry">Min. Distance must be a number</string>

    <string name="pref_analyze_gps_accuracy_title">Analyze GNSS Accuracy</string>
    <string name="pref_analyze_gps_accuracy_summary">Use GPS Benchmark to measure GNSS error
    </string>

    <string name="pref_display_category_title">Display</string>
    <string name="pref_keep_screen_on_title">Keep Screen On</string>
    <string name="pref_keep_screen_on_summary">Prevents the screen from turning off</string>
    <string name="pref_true_north_title">Point Compass to True North</string>
    <string name="pref_true_north_summary">Compass will face true north instead of magnetic north
    </string>

    <string name="pref_output_category_title">Android Monitor Output</string>
    <string name="pref_nmea_output_title">NMEA</string>
    <string name="pref_nmea_output_summary">Logs NMEA sentences to Android Studio</string>
    <string name="pref_nmea_timestamp_output_title">NMEA Timestamp</string>
    <string name="pref_nmea_timestamp_output_summary">Include NMEA timestamp in output</string>
    <string name="pref_measurement_output_title">Measurements</string>
    <string name="pref_measurement_output_summary">Logs GNSS measurements to Android Studio (Android
        7.0 and up)
    </string>
    <string name="pref_navigation_message_output_title">Navigation Messages</string>
    <string name="pref_navigation_message_output_summary">Logs GNSS navigation messages to Android
        Studio (Android 7.0 and up)
    </string>

    <string name="pref_about_category_title">About</string>
    <string name="pref_show_tutorial_title">Show tutorial</string>
    <string name="pref_show_tutorial_summary">Shows instructions for using the app</string>

    <!-- Help -->
    <string name="title_activity_help">Help</string>

    <string name="help_text">
        <b>Frequently Asked Questions (FAQ)</b>
        - https://github.com/barbeau/gpstest/blob/master/FAQ.md\n"
        <b>*** Status View ***</b>\n\n&#8226;\u0020
        <b>Latitude</b>
        - In decimal degrees (WGS 84)\n&#8226;\u0020
        <b>Longitude</b>
        - In decimal degrees (WGS 84)\n&#8226;\u0020
        <b>Altitude</b>
        - Meters above the WGS 84 ellipsoid\n&#8226;\u0020
        <b>Altitude (MSL)</b>
        - Meters above Mean Sea Level (requires NMEA support)\n&#8226;\u0020
        <b># Sats</b>
        - # satellites used in fix / # satellites in view\n&#8226;\u0020
        <b>PDOP</b>
        - Position (3D) dilution of precision (requires NMEA support)\n&#8226;\u0020
        <b>H/V DOP</b>
        - Horizontal / vertical dilution of precision (requires NMEA support)\n&#8226;\u0020
        <b>TTFF</b>
        - Time to first fix\n&#8226;\u0020
        <b>Acc</b>
        - Estimated accuracy (radius in meters of 68% confidence)\n&#8226;\u0020
        <b>ID or PRN</b>
        - identifier of this satellite (pseudorandom noise for GPS)\n&#8226;\u0020
        <b>SNR</b>
        - Signal-to-noise ratio (Android M and lower) (http://bit.ly/SNR-CN0)\n&#8226;\u0020
        <b>C/N0</b>
        - Carrier-to-noise density (Android N and higher) (http://bit.ly/SNR-CN0)\n&#8226;\u0020
        <b>Flags</b>
        - (E) if the device has ephemeris data for the satellite, (A) if the device has almanac data
        for the satellite, (U) if the satellite was used in the latest fix\n\n

        "<b>*** Sky View ***</b>\n\n&#8226;\u0020
        <b>GPS (USA Navstar)</b>
        - Circles\n&#8226;\u0020
        <b>GLONASS (Russia)</b>
        - Squares\n&#8226;\u0020
        <b>Galileo (European Union)</b>
        - Triangles\n&#8226;\u0020
        <b>QZSS (Japan)</b>
        - Triangles\n&#8226;\u0020
        <b>BeiDou/COMPASS (China)</b>
        - Pentagons\n\n

        &#8226;\u0020 Transparent satellites - Not in view\n
        &#8226;\u0020 Thin outline - In view but not used in fix\n
        &#8226;\u0020 Bold outline - Used in fix\n\n

        Expected SNR range is 10 dB (red) to 30 dB (green)\n
        Expected C/N0 range is 10 dB-Hz (red) to 50 dB-Hz (green)\n\n

        "<b>*** Acknowledgments ***</b>\n\n&#8226;\u0020
        <b>Mike Lockwood</b>
        - original developer for v1.x\n&#8226;\u0020
        <b>Sean Barbeau</b>
        - developer for v2.x and higher\n&#8226;\u0020
        <b>android-switch-backport</b>
        - https://github.com/BoD/android-switch-backport
    </string>
    <string name="gps_satellite_tab">Satellite</string>
</resources>