<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<ScrollView android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
    >


        <TextView android:id="@+id/latitude_label"
                  android:text="@string/gps_latitude_label"

                  style="@style/info_label"/>

        <TextView android:id="@+id/latitude"
                  style="@style/info_value"/>

        <TextView android:id="@+id/fix_time_label"
                  android:text="@string/gps_fix_time_label"
                  style="@style/info_label"/>

        <TextView android:id="@+id/fix_time"
                  style="@style/info_value"/>
        <TextView android:id="@+id/longitude_label"
                  android:text="@string/gps_longitude_label"
                  style="@style/info_label"/>

        <TextView android:id="@+id/longitude"
                  style="@style/info_value"/>

        <TextView android:id="@+id/gps_ttff_label"
                  android:text="@string/gps_ttff_label"
                  style="@style/info_label"/>

        <TextView android:id="@+id/ttff"
                  style="@style/info_value"/>

        <TextView android:id="@+id/altitude_label"
                  android:text="@string/gps_altitude_label"
                  style="@style/info_label"/>

        <TextView android:id="@+id/altitude"
                  style="@style/info_value"/>

        <TextView android:id="@+id/accuracy_label"
                  android:text="@string/gps_accuracy_label"
                  style="@style/info_label"/>

        <TextView android:id="@+id/accuracy"
                  style="@style/info_value"/>
        <TextView android:id="@+id/altitude_msl_label"
                  android:text="@string/gps_altitude_msl_label"
                  style="@style/info_label"/>

        <TextView android:id="@+id/altitude_msl"
                  style="@style/info_value"/>

        <TextView android:id="@+id/speed_label"
                  android:text="@string/gps_speed_label"
                  style="@style/info_label"/>

        <TextView android:id="@+id/speed"
                  style="@style/info_value"/>

        <TextView android:id="@+id/num_sats_label"
                  android:text="@string/gps_num_sats_label"
                  style="@style/info_label"/>

        <TextView android:id="@+id/num_sats"
                  style="@style/info_value"/>

        <TextView android:id="@+id/bearing_label"
                  android:text="@string/gps_bearing_label"
                  style="@style/info_label"/>

        <TextView android:id="@+id/bearing"
                  style="@style/info_value"/>

        <TextView android:id="@+id/pdop_label"
                  android:text="@string/pdop_label"
                  style="@style/info_label"
                  android:visibility="gone"/>

        <TextView android:id="@+id/pdop"
                  style="@style/info_value"
                  android:visibility="gone"/>

        <TextView android:id="@+id/hvdop_label"
                  android:text="@string/hvdop_label"
                  style="@style/info_label"
                  android:visibility="gone"/>

        <TextView android:id="@+id/hvdop"
                  style="@style/info_value"
                  android:visibility="gone"/>


    </LinearLayout>
</ScrollView>


